<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editNameField"
            android:hint="@string/edit_name"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:minHeight="48dp"/>

    <EditText
            android:layout_width="379dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editLastnameField"
            android:hint="@string/edit_lastname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editNameField" android:minHeight="48dp"/>
    <Spinner
            android:layout_width="314dp"
            android:layout_height="wrap_content" android:id="@+id/spinner_genre"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/labelGenre" android:minHeight="24dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editLastnameField"/>
    <TextView
            android:text="@string/label_genre"
            android:layout_width="49dp"
            android:layout_height="wrap_content" android:id="@+id/labelGenre"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editLastnameField"/>

    <TextView
            android:text="@string/label_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/labelBirth"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/labelGenre"/>
    <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="0dp"
            android:layout_height="155dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintStart_toEndOf="@+id/labelBirth"
            app:layout_constraintTop_toBottomOf="@+id/spinner_genre" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/label_programming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:layout_marginTop="97dp"
            app:layout_constraintTop_toBottomOf="@+id/labelBirth" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
    />
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/datePicker" android:layout_marginStart="16dp"
            android:id="@+id/radioGroup">
        <RadioButton android:id="@+id/radio_yes"
                     android:tag="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/radius_yes"
                     android:onClick="onRadioButtonClicked"
                     android:checked="true"/>
        <RadioButton android:id="@+id/radio_no"
                     android:tag="2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/radius_no"
                     android:onClick="onRadioButtonClicked"
        />
    </RadioGroup>


    <TextView
            android:text="@string/label_lenguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/labelLanguage"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="43dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/labelLanguage" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" android:id="@+id/linearLayout"
            android:layout_marginTop="16dp">
        <CheckBox android:id="@+id/checkbox_java"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/java"/>
        <CheckBox android:id="@+id/checkbox_js"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/js"/>
        <CheckBox android:id="@+id/checkbox_c"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/c_c"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" android:layout_marginTop="16dp">
        <CheckBox android:id="@+id/checkbox_python"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/python"/>
        <CheckBox android:id="@+id/checkbox_golang"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/golang"/>
        <CheckBox android:id="@+id/checkbox_csharp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/c"/>

    </LinearLayout>
    <Button
            android:text="@string/btn_enviar"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btn_sent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btn_clear"
            android:layout_marginEnd="8dp"
            android:onClick="sendMessage"
    />
    <Button
            android:text="@string/btn_limpiar"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btn_clear"
            app:layout_constraintStart_toEndOf="@+id/btn_sent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:layout_marginStart="8dp" android:layout_marginEnd="16dp"
            android:onClick="cleanInputs"
    />
</androidx.constraintlayout.widget.ConstraintLayout>